<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spendy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="warning">Attenzione!</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">confirm password</string>
    <string name="title_activity_outgoings">OutgoingsActivity</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="amount">Importo</string>
    <string name="wrong_credentials">Email e/o password errate</string>
    <string name="error_network">Connessione ad internet assente</string>
    <string name="bad_password">Password e conferma password devono coincidere</string>
    <string name="welcome_message">Grazie per la registrazione, il servizio sarà attivo al più presto</string>
    <string name="date">Data</string>
    <string name="category">Categoria</string>
    <string name="note">Note</string>
    <string name="action_add">Aggiungi spesa</string>
    <string name="action_search">Cerca</string>
    <string name="addExpense">Aggiungi</string>
    <string name="dateLabel">Data</string>
    <string name="amountLabel">Importo</string>
    <string name="categoryLabel">Categoria</string>
    <string name="noteLabel">Note</string>

</resources>
