<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateDetail"
        android:text="@string/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/standard_text"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountDetail"
        android:text="@string/amount"
        android:textSize="@dimen/standard_text"
        android:layout_below="@id/dateDetail"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryDetail"
        android:text="@string/category"
        android:textSize="@dimen/standard_text"
        android:layout_below="@id/amountDetail"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteDetail"
        android:text="@string/note"
        android:textSize="@dimen/standard_text"
        android:layout_below="@id/categoryDetail"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
    />


</RelativeLayout>